add food & predator classes

--- a/entities.html
+++ b/entities.html
@@ -1,2 +1,4 @@
 <script type="text/javascript" src="position.js"></script>
+<script type="text/javascript" src="predator.js"></script>
+<script type="text/javascript" src="food.js"></script>
 <script type="text/javascript" src="owl.js"></script>
