fix js classes & add test

--- a/entities.html
+++ b/entities.html
@@ -1,4 +1,20 @@
-<script type="text/javascript" src="position.js"></script>
-<script type="text/javascript" src="predator.js"></script>
-<script type="text/javascript" src="food.js"></script>
-<script type="text/javascript" src="owl.js"></script>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <script type="text/javascript" src="hitbox.js"></script>
+    <script type="text/javascript" src="owl.js"></script>
+    <script type="text/javascript" src="predator.js"></script>
+    <script type="text/javascript" src="food.js"></script>
+
+    <script type="text/javascript" src="test_entities.js"></script>
+</head>
+<body>
+    
+</body>
+</html>
