add entity class

--- a/entities_test.html
+++ b/entities_test.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <script type="text/javascript" src="js/hitbox.js"></script>
+    <script type="text/javascript" src="js/entity.js"></script>
     <script type="text/javascript" src="js/owl.js"></script>
     <script type="text/javascript" src="js/predator.js"></script>
     <script type="text/javascript" src="js/food.js"></script>
