--- a/vipi.html
+++ b/vipi.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Vipi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="main.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script type="text/javascript" src="js/hitbox.js"></script>
+    <script type="text/javascript" src="js/entity.js"></script>
+    <script type="text/javascript" src="js/owl.js"></script>
+    <script type="text/javascript" src="js/predator.js"></script>
+    <script type="text/javascript" src="js/food.js"></script>
+
+    <script type="text/javascript" src="js/vipi.js"></script>
 </head>
 <body>
-    <canvas id="game"></canvas>
+    <div id="game-container">
+        <canvas id="game"></canvas>
+    </div>
 </body>
 </html>
