--- a/vipi.html
+++ b/vipi.html
@@ -6,7 +6,12 @@
     <title>Vipi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
     <script type="text/javascript" src="js/hitbox.js"></script>
     <script type="text/javascript" src="js/entity.js"></script>
@@ -17,7 +22,16 @@
     <script type="text/javascript" src="js/vipi.js"></script>
 </head>
 <body>
-    <div id="game-container">
+    <div class="col-md-6 col-md-offset-2">
+        <div class = "page-header">
+            <h1 class="text-align:center;">
+                Vipi, le jeu JS nextgen <br>
+                <small>oui</small>
+            </h1>
+        </div>
+    </div>
+
+    <div id="game-container" class="col-md-6 col-md-offset-2" style="border:1px solid black; height: 500px;">
         <canvas id="game"></canvas>
     </div>
 </body>
