--- a/vipi.html
+++ b/vipi.html
@@ -26,8 +26,7 @@
     <div class="col-md-6 col-md-offset-2">
         <div class = "page-header">
             <h1 class="text-align:center;">
-                Vipi, le jeu JS nextgen <br>
-                <small>oui</small>
+                Vipi
             </h1>
         </div>
     </div>
