--- a/tuto4.html
+++ b/tuto4.html
@@ -25,8 +25,8 @@
       <img src="./image/Black_Down_Arrow.png" alt="" />
     </div>
       <div class="flex-end-button">
-        <form action="./Vipi.html">
-          <button class="button btn-2">SUIVANT</button>
+        <form action="./vipi.html">
+          <button class="button btn-2">COMMENCER LA PARTIE</button>
         </form>
       </div>
     </div>
